working on perldelta
(manually cherry picked from commit 2c4879e2628d6fa5a764e130f610deaff6f859a5)

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -358,7 +358,8 @@ platform specific bugs also go here.
 
 =item *
 
-XXX
+Fixed a crash with C<s///l> where it thought it was dealing with UTF-8
+when it wasn't. [perl #129038]
 
 =back
 
