--- a/pod/perldeprecation.pod
+++ b/pod/perldeprecation.pod
@@ -323,16 +323,13 @@ It's allowed to use a list of variables in a format, without
 separating them with commas. This usage has been deprecated
 for a long time, and it will be a fatal error in Perl 5.28.
 
-
-
 =head3 Use of C<\N{}>
 
 Use of C<\N{}> with nothing between the braces was deprecated in
-Perl 5.24, and will throw a fatal error in Perl 5.28.
+Perl 5.24, and throws a fatal error as of Perl 5.28.
 
 Since such a construct is equivalent to using an empty string,
 you are recommended to remove such C<\N{}> constructs.
-
 
 =head3 Using the same symbol to open a filehandle and a dirhandle
 
